--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
     "name": "blogserver",
     "version": 2,
     "alias": "blogserver",
-    "builds": [{ "src": "app.js", "use": "@now/node-server" }],
+    "builds": [{ "src": "app.js", "use": "@vercel/node-server" }],
     "routes": [
         {
           "src": "/*",
