--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "name": "blogging-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "In this assignment you will be expected to write a backend code for Blog app,",
   "main": "app.js",
-  "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
@@ -23,5 +17,20 @@
     "lowdb": "^1.0.0",
     "mongoose": "^6.1.4",
     "multer": "^1.4.4"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nrcool/blogs-app-server.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nrcool/blogs-app-server/issues"
+  },
+  "homepage": "https://github.com/nrcool/blogs-app-server#readme"
 }
