--- a/now.json
+++ b/now.json
@@ -5,9 +5,8 @@
     "builds": [{ "src": "app.js", "use": "@vercel/node" }],
     "routes": [
         {
-          "src": "/*",
-          "dest": "/app.js",
-          "methods": ["*"]
+          "src": "/(.*)",
+          "dest": "/"
         }
       ]
   }
