--- a/now.json
+++ b/now.json
@@ -1,11 +1,15 @@
 {
-    "name": "blogserver",
     "version": 2,
-    "alias": "blogserver",
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
-          "src": "/(.*)",
-          "dest": "/"
+            "src": "/(.*)",
+            "dest": "/"
         }
-      ]
-  }
+    ]
+}
