--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "In this assignment you will be expected to write a backend code for Blog app,",
   "main": "app.js",
-
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
@@ -16,12 +15,13 @@
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
     "mongoose": "^6.1.4",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {},
   "scripts": {
     "start": "node app.js",
-    "dev":"nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
