--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "morgan": "^1.10.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
